objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allergy_to_Food__c</fullName>
        <label>Allergy to Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <inlineHelpText>Birthdate format must be DD/MM/YYYY</inlineHelpText>
        <label>Birthdate</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <label>Business Email</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <formula>Account.CIS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_to_Deliver__c</fullName>
        <label>Channel to Deliver</label>
        <picklist>
            <picklistValues>
                <fullName>Event Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>short scoop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Character__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Socialization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <label>Collection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Firstname__c</fullName>
        <label>Contact Firstname</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Contact_Owner__c</fullName>
        <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
        <label>Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Position__c</fullName>
        <label>Contact Position</label>
        <picklist>
            <picklistValues>
                <fullName>กรรมการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ประธานกรรมการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จ้ดการฝ่ายการเงิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จ้ดการฝ่ายบัญชีและการเงิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จ้ดการฝ่ายผลิต</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จ้ดการฝ่ายจัดซื้อ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จ้ดการฝ่ายบัญชี</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จ้ดการฝ่ายการตลาด</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จ้ดการฝ่ายนำเข้าและส่งออก</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผุ้จ้ดการฝ่ายอำนวยการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จ้ดการฝ่ายเอกสาร</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>กรรมการบริหาร</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จ้ดการภาคพื้นแปซิฟิก</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จัดการร้าน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จัดการโรงงาน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้จัดการสาขา</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้อำนวยการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>รองกรรมการผู้จัดการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เจ้าของกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ โปรดระบุ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Preference_Communication__c</fullName>
        <label>Contact Preference Communication</label>
        <picklist>
            <picklistValues>
                <fullName>Face to face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Preference_Last_Modified_By__c</fullName>
        <label>Contact Preference Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Preference_Last_Modified_Date__c</fullName>
        <label>Contact Preference Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Representative_Type__c</fullName>
        <label>Contact Representative Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gate keeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Account.Name_Surname_TH__c</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>CIS ID + Contact First Name + Contact Last Name, replace space with _</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <label>Facebook ID</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Favorite_Food__c</fullName>
        <label>Favourite Food</label>
        <picklist>
            <picklistValues>
                <fullName>Japanese food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maxican Food</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Favourite_Brand__c</fullName>
        <label>Favourite Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favourite_Magazine__c</fullName>
        <label>Favourite Magazine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favourite_Restaurant__c</fullName>
        <label>Favourite Restaurant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favourite_Sport__c</fullName>
        <label>Favourite Sport</label>
        <picklist>
            <picklistValues>
                <fullName>Basketball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Football</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Generation__c</fullName>
        <label>Generation</label>
        <picklist>
            <picklistValues>
                <fullName>Founder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heir</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_body_Life_Style__c</fullName>
        <label>Health-body Life Style</label>
        <picklist>
            <picklistValues>
                <fullName>กอล์ฟ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>แบตมินตัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ฟุตบอล</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>สปา/โยคะ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ ระบุ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Health_mind_Life_Style__c</fullName>
        <label>Health-mind Life Style</label>
        <picklist>
            <picklistValues>
                <fullName>นั่งสมาธิ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ทำบุญไหว้พระ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>กิจกรรมช่วยเหลือสังคม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ ระบุ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Instagram_ID__c</fullName>
        <label>Instagram ID</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Interested_Event_General__c</fullName>
        <label>Interested Event(General)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interested_Event_Investment__c</fullName>
        <label>Interested Event(Investment)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interested__c</fullName>
        <label>Interested</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interesting_Story_Topic__c</fullName>
        <label>Interesting Story / Topic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Langauge_Spoken__c</fullName>
        <label>Langauge Spoken</label>
        <picklist>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Life_Style_Details__c</fullName>
        <label>Life Style Details</label>
        <picklist>
            <controllingField>Life_Style__c</controllingField>
            <picklistValues>
                <fullName>ภูเขา</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ทะเล</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>น้ำตก/แม่น้ำ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>กอล์ฟ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>แบตมินตัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ฟุตบอล</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>สปา/โยคะ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>นั่งสมาธิ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ทำบุญไหว้พระ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>กิจกรรมช่วยเหลือสังคม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>รับประทานอาหาร</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ช้อปปิ้ง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ชมภาพยนตร์</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ชมคอนเสิร์ต</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>คาราโอเกะ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ปาร์ตี้สังสรรค์</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ ระบุ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Life_Style__c</fullName>
        <label>Life Style</label>
        <picklist>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health-body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health-mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_ID__c</fullName>
        <label>Line ID</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Most_Interested_Topic__c</fullName>
        <label>Most Interested Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nick Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Info_about_Character__c</fullName>
        <label>Other Info about Character</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Life_Style_Detail__c</fullName>
        <label>Other Life Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <inlineHelpText>Phone format must be in number with 9 or 10 digits</inlineHelpText>
        <label>Phone Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Presentation_Skill__c</fullName>
        <label>Presentation Skill</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Good</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recreation_Life_Style__c</fullName>
        <label>Recreation Life Style</label>
        <picklist>
            <picklistValues>
                <fullName>รับประทานอาหาร</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ช้อปปิ้ง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ชมภาพยนตร์</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ชมคอนเสิร์ต</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>คาราโอเกะ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ปาร์ตี้สังสรรค์</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ ระบุ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Social_Network_Type__c</fullName>
        <label>Social Network Type</label>
        <picklist>
            <picklistValues>
                <fullName>Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instagram</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Travel_Life_Style__c</fullName>
        <label>Travel Life Style</label>
        <picklist>
            <picklistValues>
                <fullName>ภูเขา</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ทะเล</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>น้ำตก/แม่น้ำ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ ระบุ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Contact_Position__c</columns>
        <columns>Birthdate__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Personal_Email__c</columns>
        <columns>Business_Email__c</columns>
        <columns>Contact_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Contact_Position__c</columns>
        <columns>Birthdate__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Personal_Email__c</columns>
        <columns>Business_Email__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>SME_Contact</fullName>
        <active>true</active>
        <description>Contact Record Type used by SME</description>
        <label>SME-Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Invalid_Contact_Birthdate</fullName>
        <active>true</active>
        <errorConditionFormula>IF(((LEN(Birthdate__c)&gt;0 &amp;&amp; NOT(REGEX(Birthdate__c, &quot;([012][0-9]|3[01])(/)(0[1-9]|1[012])(/)([12][0-9][0-9][0-9])&quot;))) || (VALUE(RIGHT(Birthdate__c, 4))&lt;2458)),FALSE,
DATE(VALUE(RIGHT(Birthdate__c, 4))-IF(YEAR(TODAY())&gt;2500,0,543),
VALUE(MID(Birthdate__c, 4, 2)),
(VALUE(LEFT(Birthdate__c, 2))))&gt;TODAY())</errorConditionFormula>
        <errorDisplayField>Birthdate__c</errorDisplayField>
        <errorMessage>Birthdate format must be DD/MM/YYYY. For example, 31/12/2530. And must not greater than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Contact_Position_Cannot_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Contact_Position__c) = &quot;อื่นๆ โปรดระบุ&quot;, ISBLANK(Title))</errorConditionFormula>
        <errorDisplayField>Title</errorDisplayField>
        <errorMessage>กรุณากรอกชื่อตำแหน่งบุคคลผู้ติดต่อ</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Standard_Firstname_Must_be_Blank</fullName>
        <active>false</active>
        <description>Contact Person Firstname (Encrypted) field is a required field</description>
        <errorConditionFormula>NOT(ISBLANK(FirstName))</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>กรุณากรอกชื่อบุคคลผู้ติดต่อที่ฟิลด์ Contact Firstname เท่านั้น</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Contact_Birthdate_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(LEN(Birthdate__c)&gt;0  &amp;&amp;
NOT(REGEX(Birthdate__c, &quot;([012][0-9]|3[01])(/)(0[1-9]|1[012])(/)([12][0-9][0-9][0-9])&quot;))) ||
(VALUE(RIGHT(Birthdate__c, 4))&lt;2458)</errorConditionFormula>
        <errorDisplayField>Birthdate__c</errorDisplayField>
        <errorMessage>Birthdate format must be DD/MM/YYYY. For example, 31/12/2530.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Contact_Person_Phone_Format</fullName>
        <active>true</active>
        <errorConditionFormula>OR(NOT(ISNUMBER(Phone_Number__c)), OR(LEN(Phone_Number__c) &lt; 9, LEN(Phone_Number__c) &gt; 10))</errorConditionFormula>
        <errorDisplayField>Phone_Number__c</errorDisplayField>
        <errorMessage>Phone format must be in number with 9 or 10 digits</errorMessage>
    </validationRules>
</CustomObject>